discussion/kv_engine/138293/138293_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Move scope and collection stats to StatCollector interface

These stats will be exposed as part of the high cardinality Prometheus
endpoint. Prepare by moving relevant code to use the collector
interface rather than directly handling cookie and add_stat callbacks.

This patch does _not_ add relevant declarations to stats.def.h _yet_.
Doing so will require support for

* separating cbstats names from enum keys (some stats have the same
  name)
* generated vbucket prefixes

This will be resolved in a later patch, as neither point affects
Prometheus stats.

Change-Id: I5229c2b002ea9041d0cbd8f3a36bffeb4d220a48

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-11-06 10:50:01.000000000
Message: 
Uploaded patch set 9: Patch Set 8 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-06 11:40:55.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5479/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/manifest.cc:443:46: error: use of undeclared identifier "add_stat" [clang-diagnostic-error]
            add_casted_stat("force", "true", add_stat, cookie);
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/manifest.cc:443:56: error: use of undeclared identifier "cookie" [clang-diagnostic-error]
            add_casted_stat("force", "true", add_stat, cookie);
                                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5479/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/collections/manifest.cc:443:46:
error: use of undeclared identifier "add_stat" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5479/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27275/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/collections/manifest.cc:443:46:
error: use of undeclared identifier "add_stat"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27275/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31587/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\collections\manifest.cc(443): error C2065: "add_stat": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31587/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6964/ : FAILURE

Compile error at [2020-11-06T11:18:37.565Z] ../kv_engine/engines/ep/src/collections/manifest.cc:443:46:
error: ?add_stat? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6964/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6851/ : FAILURE

Compile error at [2020-11-06T11:32:45.731Z] ../kv_engine/engines/ep/src/collections/manifest.cc:443:46:
error: ?add_stat? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6851/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7153/ : FAILURE

Compile error at [2020-11-06T11:27:37.029Z] ../kv_engine/engines/ep/src/collections/manifest.cc:443:46:
error: use of undeclared identifier "add_stat"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7153/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5922/ : FAILURE

Compile error at [2020-11-06T10:59:31.332Z] ../kv_engine/engines/ep/src/collections/manifest.cc:443:46:
error: use of undeclared identifier "add_stat"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5922/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14773/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4008/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
